--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "msw": "^2.12.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-is": "^19.2.3",
     "react-router-dom": "^7.10.1",
     "recharts": "^3.6.0",
     "zustand": "^5.0.9"
